# pinhole_camera

./: CMakeLists.txt  README.md  config.rviz  demo.rviz  package.xml
include/: project.h
launch/: cam_projection.launch  demo.launch
src/: 2d_proj.py  project.cpp  pub_sphere.py
